# spectrumutils

./: .gitignore  README.md  setup.cfg  setup.py
data/fulcher/: franck_condon_factor_d-to-a.csv
sample/: fulcher.ipynb  spectrum.ipynb  spectrum_fitting.ipynb
sample/data/: fulcher_spectrum.npy  sample_amplitudes.npy  sample_spectrum.npy  sample_spectrum2.npy  spectrum_array.npy
spectrumutils/: __init__.py
src/spectrumutils/: __init__.py  fit.py  fulcher.py  spectrum.py
src/spectrumutils/data/fulcher/: D2_wavelength.npy  franck_condon_factor.txt  fulcher_wavelength.nc  fulcher_wavelength.npy
