[metadata]
name = spectrumutils
version = 0.0.1
author = Niihama Atsushi
author_email = atsushi9731@gmail.com
description = A python package for spectroscopy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AtsushiNi/spectrumutils
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    matplotlib
    lmfit
    peakutils
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
spectrumutils = data/fulcher/franck_condon_factor.txt
